--- a/about.html
+++ b/about.html
@@ -6,6 +6,6 @@
     <title>GitHub</title>
 </head>
 <body>
-    <h1>This all about github command</h1>
+    <h1>This all about github command line</h1>
 </body>
 </html>
